<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_bench</name>
  <version>0.0.0</version>
  <description>ROS2 Jazzy benchmarking package</description>
  <maintainer email="todo@todo.todo">rdros2</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>psutil</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <build_depend>ament_cmake</build_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
